package com.github.kokasumi.design.principles.dip.driver.counter;

/**
 * @version v1.0
 * @author: lg
 * @date: 2022/10/18 22:57
 * @description 奔驰车
 * @since v1.0
 */
public class Benz {
    public void run() {
        System.out.println("奔驰汽车开始运行...");
    }
}
