package com.github.kokasumi.design.principles.dip.driver.counter;

/**
 * @version v1.0
 * @author: lg
 * @date: 2022/10/18 22:58
 * @description
 * @since v1.0
 */
public class Driver {
    public void drive(Benz benz) {
        benz.run();
    }
}
