@startuml
package com.github.kokasumi.design.principles.dip.driver.counter {
    class Benz {
        + void run();
    }
    class Driver {
        + void drive(Benz benz);
    }
    note top of Driver: 司机可以驾驶奔驰汽车，但是不能驾驶宝马
    Benz <---left* Driver
    class Client{}
    Benz <--- Client
    Driver <--- Client
}
@enduml